fixed minus symbol overlapping numbers when counter is negative

--- a/index.css
+++ b/index.css
@@ -378,7 +378,7 @@ body.split-layout #counter {
 }
 
 .sep {
-    width: 0.25em;
+    width: 0.45em;
 }
 
 .digit {
